--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: raFunctions
-Title: What the Package Does (One Line, Title Case)
+Title: Recopilaciones de funciones utilizadas en distintos proyectos
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Rafael",
+           family = "Zambrano",
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Recopilaciones de funciones utilizadas en distintos proyectos.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -19,6 +19,9 @@ Imports:
     purrr,
     data.table,
     geosphere,
-    parallel
+    parallel,
+    rlang
 URL: https://github.com/rafzamb/raFunctions
 BugReports: https://github.com/rafzamb/raFunctions/issues
+Depends: 
+    R (>= 2.10)
