--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: raFunctions
+Package: sknifedatar
 Title: Recopilaciones de funciones utilizadas en distintos proyectos
 Version: 0.0.0.9000
 Authors@R: 
