--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: sknifedatar
-Title: Recopilaciones de funciones utilizadas en distintos proyectos
+Title: Swiss knife of data for R
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Rafael",
