--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,3 +7,7 @@ template:
     image:
       src: man/figures/logo.jpg
       alt: "Pool noodles configured to form the word poolnoodlr"
+
+authors:
+  Hadley Wickham:
+    href: http://hadley.nz
