--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,8 @@ pandoc: 2.11.1.1
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2021-01-01T17:12Z
+last_built: 2021-01-02T03:27Z
+urls:
+  reference: https://rafzamb.github.io/sknifedatar//reference
+  article: https://rafzamb.github.io/sknifedatar//articles
+
