--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Colección de funciones que facilitan el desarrollo de las distintas etapas de un proyecto de ciencia de datos.
+Description: Colección de funciones que facilitan el desarrollo práctico de un proyecto de ciencia de datos.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -23,7 +23,8 @@ Imports:
     rlang,
     yardstick,
     ggplot2,
-    scales
+    scales,
+    tidyr
 URL: https://github.com/rafzamb/sknifedatar
 BugReports: https://github.com/rafzamb/sknifedatar/issues
 Depends: 
