--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,4 +9,6 @@ template:
 
 authors:
   Rafael Zambrano:
-    href: https://rafael-zambrano-blog-ds.netlify.app/
+    href: https://github.com/rafzamb
+  Karina Bartolome:
+    href: https://github.com/karbartolome
