--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(insert_na)
 export(mlapply)
 export(modeltime_multifit)
+export(modeltime_multiforecast)
 export(multieval)
 export(pertenencia_punto)
 export(sliding_window)
