Función para modeltime_multirefit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(mlapply)
 export(modeltime_multibestmodel)
 export(modeltime_multifit)
 export(modeltime_multiforecast)
+export(modeltime_multirefit)
 export(multieval)
 export(pertenencia_punto)
 export(sliding_window)
