--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,13 @@ development:
 template:
   params:
     bootswatch: cosmo
+  opengraph:
+    image:
+      src: man/figures/logo.png
+      alt: "sknifedatar is a package that serves primarily as an extension to the modeltime ecosystem. In addition, it includes some functionalities for spatial data and visualization."
+    twitter:
+      creator: "@rafa_zamr"
+      card: summary_large_image
 
 authors:
   Rafael Zambrano:
