--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,10 @@
 pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-03-18T02:15Z
+articles:
+  Geospatial: Geospatial.html
+  automatic_tabs: automatic_tabs.html
+last_built: 2021-03-24T21:41Z
 urls:
   reference: https://rafzamb.github.io/sknifedatar//reference
   article: https://rafzamb.github.io/sknifedatar//articles
