--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,11 @@ export(modeltime_multibestmodel)
 export(modeltime_multifit)
 export(modeltime_multiforecast)
 export(modeltime_multirefit)
+export(modeltime_wfs_bestmodel)
+export(modeltime_wfs_fit)
+export(modeltime_wfs_forecast)
+export(modeltime_wfs_rank)
+export(modeltime_wfs_refit)
 export(multieval)
 export(sliding_window)
 importFrom(magrittr,"%>%")
