--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Swiss knife of data for R
 Version: 0.0.0.9002
 Authors@R: 
     c(person(given = "Rafael", family = "Zambrano", role = c("aut", "cre"), email = "rafazambragit@gmail.com"),
-      person(given = "Karina", family = "Bartolome", role = c("aut"),
-      person(given = "Rodrigo", family = "Serrano", role = c("ctb"))
+      person(given = "Karina", family = "Bartolome", role = c("aut")),
+      person(given = "Rodrigo", family = "Serrano", role = c("ctb")))
 Description: sknifedatar is a package that serves primarily as an extension to the modeltime ecosystem. In addition, it includes some functionalities for spatial data and visualization.
 License: MIT + file LICENSE
 Encoding: UTF-8
