Modeltime heatmap for workflowsets
Added de plotting function for the wffits object generated with modeltime_wfs_fit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(modeltime_multirefit)
 export(modeltime_wfs_bestmodel)
 export(modeltime_wfs_fit)
 export(modeltime_wfs_forecast)
+export(modeltime_wfs_heatmap)
 export(modeltime_wfs_rank)
 export(modeltime_wfs_refit)
 export(multieval)
