--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,10 @@ export(modeltime_wfs_bestmodel)
 export(modeltime_wfs_fit)
 export(modeltime_wfs_forecast)
 export(modeltime_wfs_heatmap)
+export(modeltime_wfs_multibestmodel)
+export(modeltime_wfs_multifit)
+export(modeltime_wfs_multiforecast)
+export(modeltime_wfs_multirefit)
 export(modeltime_wfs_rank)
 export(modeltime_wfs_refit)
 export(multieval)
