--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: sknifedatar
-Title: Swiss knife of data for R
+Title: Swiss Knife of Data
 Version: 0.0.0.9002
 Authors@R: 
     c(person(given = "Rafael", family = "Zambrano", role = c("aut", "cre"), email = "rafazambragit@gmail.com"),
       person(given = "Karina", family = "Bartolome", role = c("aut")),
       person(given = "Rodrigo", family = "Serrano", role = c("ctb")))
-Description: sknifedatar is a package that serves primarily as an extension to the modeltime ecosystem. In addition, it includes some functionalities for spatial data and visualization.
+Description: Extension of the 'modeltime' ecosystem. In addition. Allows fitting of multiple models
+             over multiple time series. It also provides a bridge for using the 'workflowsets' package
+             with 'modeltime'. It includes some functionalities for spatial data and visualization.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -30,11 +32,14 @@ Imports:
 URL: https://github.com/rafzamb/sknifedatar
 BugReports: https://github.com/rafzamb/sknifedatar/issues
 Depends: 
-    R (>= 3.6)
+    R (>= 3.6.0)
 Suggests: 
-    erer,
     workflows (>= 0.2.2),
     recipes (>= 0.1.15),
     ggplot2,
     yardstick (>= 0.0.8),
-    timetk (>= 2.6.0)
+    timetk (>= 2.6.0),
+    spelling,
+    rmarkdown,
+    earth
+Language: en-US
