--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,7 +4,8 @@ pkgdown_sha: ~
 articles:
   Geospatial: Geospatial.html
   automatic_tabs: automatic_tabs.html
-last_built: 2021-04-02T14:45Z
+  workflowsets_times: workflowsets_times.html
+last_built: 2021-05-18T21:00Z
 urls:
   reference: https://rafzamb.github.io/sknifedatar//reference
   article: https://rafzamb.github.io/sknifedatar//articles
