--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,7 +9,7 @@ template:
   opengraph:
     image:
       src: man/figures/logo_twitter_sknidatar.png
-      alt: "sknifedatar is a package that serves primarily as an extension to the modeltime ecosystem. In addition, it includes some functionalities for spatial data and visualization."
+      alt: "Serves primarily as an extension to the modeltime ecosystem. In addition, it includes some functionalities for spatial data and visualization."
     twitter:
       creator: "@rafa_zamr"
       card: summary_large_image
