--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,44 +2,53 @@ Package: sknifedatar
 Title: Swiss Knife of Data
 Version: 0.0.0.9003
 Authors@R: 
-    c(person(given = "Rafael", family = "Zambrano", role = c("aut", "cre"), email = "rafazambragit@gmail.com"),
-      person(given = "Karina", family = "Bartolome", role = c("aut")),
-      person(given = "Rodrigo", family = "Serrano", role = c("ctb")))
-Description: Extension of the 'modeltime' ecosystem. In addition. Allows fitting of multiple models
-             over multiple time series. It also provides a bridge for using the 'workflowsets' package
-             with 'modeltime'. It includes some functionalities for spatial data and visualization.
+    c(person(given = "Rafael",
+             family = "Zambrano",
+             role = c("aut", "cre"),
+             email = "rafazambragit@gmail.com"),
+      person(given = "Karina",
+             family = "Bartolome",
+             role = "aut"),
+      person(given = "Rodrigo",
+             family = "Serrano",
+             role = "ctb"))
+Description: Extension of the 'modeltime' ecosystem. In
+    addition. Allows fitting of multiple models over multiple time series.
+    It also provides a bridge for using the 'workflowsets' package with
+    'modeltime'. It includes some functionalities for spatial data and
+    visualization.
 License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
-Imports: 
-    dplyr (>= 1.0.0),
-    magrittr,
-    purrr,
-    data.table,
-    rlang (>= 0.1.2),
-    tidyr,
-    tibble (>= 3.1.0),
-    modeltime,
-    rsample (>= 0.0.9),
-    parsnip (>= 0.1.4),
-    tune (>= 0.1.3),
-    knitr,
-    utils,
-    workflowsets,
-    cli
 URL: https://github.com/rafzamb/sknifedatar
 BugReports: https://github.com/rafzamb/sknifedatar/issues
 Depends: 
     R (>= 3.6.0)
+Imports: 
+    cli,
+    data.table,
+    dplyr (>= 1.0.0),
+    knitr,
+    magrittr,
+    modeltime,
+    parsnip (>= 0.1.4),
+    purrr,
+    rlang (>= 0.1.2),
+    rsample (>= 0.0.9),
+    tibble (>= 3.1.0),
+    tidyr,
+    tune (>= 0.1.3),
+    utils,
+    workflowsets
 Suggests: 
-    workflows (>= 0.2.2),
-    recipes (>= 0.1.15),
+    earth,
     ggplot2,
-    yardstick (>= 0.0.8),
-    timetk (>= 2.6.0),
-    spelling,
+    recipes (>= 0.1.15),
     rmarkdown,
-    earth
+    spelling,
+    timetk (>= 2.6.0),
+    workflows (>= 0.2.2),
+    yardstick (>= 0.0.8)
+Encoding: UTF-8
 Language: en-US
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
