--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,6 @@ Depends:
     R (>= 3.6.0)
 Imports: 
     cli,
-    data.table,
     dplyr (>= 1.0.0),
     knitr,
     magrittr,
@@ -36,8 +35,7 @@ Imports:
     tibble (>= 3.1.0),
     tidyr,
     tune (>= 0.1.3),
-    utils,
-    workflowsets
+    utils
 Suggests: 
     earth,
     ggplot2,
@@ -46,7 +44,8 @@ Suggests:
     spelling,
     timetk (>= 2.6.0),
     workflows (>= 0.2.2),
-    yardstick (>= 0.0.8)
+    yardstick (>= 0.0.8),
+    workflowsets
 Encoding: UTF-8
 Language: en-US
 LazyData: true
